--- a/StellaWebInterface/public/index.html
+++ b/StellaWebInterface/public/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-  <title>Stella</title>
-  
+	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<title>Stella</title>
+
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="/bundle.js"></script>
+<div id="app"></div>
+<script src="/bundle.js"></script>
 </body>
 
 </html>
